[metadata]
name=just-another-rogue
version=0.0.1
author = Rafael Okada
author_email = rafael.okada@aiquatro.com
description = Just another roguelike game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/okada-t-rafael/just-another-rogue
project_urls =
    Bug Tracker = https://github.com/okada-t-rafael/just-another-rogue/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.9
zip_safe = no
install_requires=
    tcod==13.6.2
    
[options.packages.find]
where=src

[options.package_data]
just_another_rogue = py.typed

[options.extras_require]
testing =
    flake8>=4.0.1
    mypy>=0.931
    pytest>=7.1.2
    pytest-cov>=3.0.0